@@ -1,10 +1,10 @@
 /* module make possible connectoin thrue socket.io on a client */
-var CloudCommander, io, socket;
+var CloudCommander, io, socket, Term;
 (function(){
     "use strict";
     var Util = CloudCommander.Util;
     
-    Util.jsload("http://localhost:31337/socket.io/lib/socket.io.js", {
+    Util.jsload("/socket.io/lib/socket.io.js", {
         onload : function(){
             socket = io.connect(document.location.hostname);
             
@@ -14,6 +14,7 @@ var CloudCommander, io, socket;
             
             socket.on('message', function (msg) {
                 console.log(msg);
+                Term.echo(msg);
             });
             
             socket.on('disconnect', function () {
