@@ -1,4 +1,4 @@
-var CloudCommander, $;
+var CloudCommander, $, Term, socket;
 /* object contains terminal jqconsole */
 
 (function(){
@@ -20,17 +20,7 @@ var CloudCommander, $;
             src : 'lib/client/terminal/jquery-terminal/jquery.terminal.css'
         });
         
-        Util.cssSet({
-            id      :'terminal-css',
-            inner   :'#terminal{'                   +
-                        'position : relative'       +
-                    '},'                            +
-                    '#terminal::selection{'         +
-                            'background: #fe57a1;'  +
-                            'color: #fff;'          +
-                            'text-shadow: none;'    +
-                    '}'
-        });
+        Util.jsload('lib/client/socket.js');
         
         var lLoadTerm_func = function(){
             Util.jsload('lib/client/terminal/jquery-terminal/jquery.terminal.js',
@@ -67,7 +57,9 @@ var CloudCommander, $;
         
         $(function($, undefined) {
             $('#terminal').terminal(function(command, term) {
-                   term.echo('');
+                Term = term;
+                term.echo('');
+                socket.send(command);
             });
         });
     };
