@@ -11,7 +11,6 @@
     position: fixed;
 }
 .terminal {
-    padding: 10px;
     position: relative;
     overflow: hidden;
 }
@@ -27,7 +26,6 @@
     font-family: FreeMono, monospace;
     color: #aaa;
     background-color: #000;
-    font-size: 12px;
     line-height: 14px;
 }
 .terminal .cmd span {
