@@ -1656,7 +1656,9 @@ function get_stack(caller) {
                 div = $('<div/>').html(encodeHTML(string));
             }
             output.append(div);
-            div.width('100%');
+            /*
+                div.width('100%');
+            */
             scroll_to_bottom();
             return div;
         }
