@@ -20,7 +20,7 @@ exports.listen = function(pServer){
         socket.on('message', function(pCommand) {
             console.log(pCommand);
             
-            exec(pCommand, exec);
+            exec(pCommand, getExec);
         });
         
     });
@@ -33,7 +33,7 @@ exports.listen = function(pServer){
  * @param stdout
  * @param stderr
  */
-function exec(error, stdout, stderr) {
+function getExec(error, stdout, stderr) {
     if(stdout){
         console.log(stdout);
         Socket.send(stdout);
